<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/notebook" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/notebook"
        android:stretchColumns="0" >

        <TableRow>

            <ImageView
                android:id="@+id/appe_001"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:contentDescription="@string/error"
                android:paddingTop="20dp"
                android:src="@drawable/a_001" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/appetizer_001"
                android:textSize="15dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <RatingBar
                android:id="@+id/cookie_rating"
                style="@style/rating_cookie_bar"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="3.5" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:text="@string/pretime"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/pretime_a_001"
                android:textColor="#8B5A2B" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:text="@string/cooktime"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/cook_a_time"
                android:textColor="#8B5A2B" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/Ingredients"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <ListView
                android:id="@+id/list_ingredients"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </ListView>
        </TableRow>
    </TableLayout>

</LinearLayout>